shows/static/shows/css/style.css
/* ... */
.home-wrapper {
  padding: 200px 0px 150px 0px;
}

.home-sm {
  padding: 175px 0px 125px 0px !important;
}
.home-sm .h1 {
  margin-top: 30px !important;
}
.home-wrapper-alt{
  display: table-cell;
  vertical-align: middle;
}

.home-wrapper h1{
  line-height: 46px;
  width: 70%;
  margin: 0 auto;
}

.home-wrapper h4 {
  line-height: 24px;
  font-size: 16px;
  font-weight: 400;
  width: 80%;
  margin: 30px auto 50px auto;
}

.full-screen {
  display: table;
  height: 100%;
  width: 100%;
}

.or-space {
  margin: 0 20px;
}

iframe {
  max-width: 100%;
}

.frame-border {
  border: 9px solid rgba(0, 0, 0, 0.3);
  webkit-border-radius: 5px 5px 5px 5px;
  -moz-border-radius: 5px 5px 5px 5px;
  border-radius: 5px 5px 5px 5px;
}

/* ==== 7. FEATURES ==== */

.feat-description p {
  margin-top: 20px;
  margin-bottom: 20px;
  line-height: 26px;
}

.feat-description h4 {
  font-weight: 300;
  line-height: 28px;
}

.title-box-icon i {
  font-size: 48px;
  margin-bottom: 20px;
}

.title-box-icon h3 {
  margin-bottom: 70px;
}

.features-box {
  margin-top: 30px;
  padding: 20px;
  text-align: center;
}

.features-box i {
  font-size: 48px;
  padding-bottom: .5em;
}



/* ==== 8. Pricing === */

.pricing-column {
  position: relative;
  margin-bottom: 40px;
}

.pricing-column .inner-box {
  position: relative;
  margin: 20px auto 0px auto;
  max-width: 320px;
  padding: 0px 30px 50px;
  border: 2px solid #95A8B7;
}

.inner-box p {
  padding: 0px 20px;
  text-align: center;
  font-size: 15px;
  line-height: 26px;
  color: #7f7f7f;
  margin-bottom: 30px;
}

.inner-box.active {
  -webkit-transform: scale(1.05);
      -ms-transform: scale(1.05);
          transform: scale(1.05);
}

.pricing-column .plan-header {
  position: relative;
  padding: 30px 20px 25px;
}

.pricing-column .plan-title {
  font-size: 16px;
  margin-bottom: 10px;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 400;
}

.pricing-column .plan-price {
  font-size: 38px;
  margin-bottom: 10px;
  font-weight: 700;
}

.pricing-column .plan-duration {
  font-size: 13px;
  color: #98a6ad;
}

.pricing-column .plan-stats {
  position: relative;
  padding: 30px 20px 15px;
}

.pricing-column .plan-stats li {
  margin-bottom: 15px;
  line-height: 24px;
}

.pricing-column .plan-stats li i {
  font-size: 18px;
  width: 26px;
  vertical-align: middle;
}



/* === 9.Testimonials === */

.testimonial-description {
  margin-top: 50px;
  border-radius: 5px;
  padding: 30px 30px 20px 30px;
  position: relative;
  background-color: #ffffff;
  box-shadow: 1px 1px 2px rgba(222, 222, 222, 0.32);
}

.testimonial-description:after {
  content: "";
  bottom: -15px;
  left: 50px;
  position: absolute;
  width: 0;
  height: 0;
  border-top: 15px solid #fff;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
}

.testimonial-description p {
  line-height: 24px;
  font-size: 14px;
  font-style: italic;
}

.testimonial-user-thumb img{
  border-radius:50%;
  width: 60px;
  height: 60px;
}

.testimonial-user-name {
  margin-bottom: 0px;
}

.user-thumb,
.user-text{
  display: inline-block;
  vertical-align:bottom;
}

.user-thumb{
  margin-right:15px;
}

.testimonial-user-info{
  padding-left:30px;
  margin-top: 35px;
}

.user-position{
  font-weight:400;
  display: block;
}


/* === 10. SUBSCRIBE === */

.input-subscribe {
  background-color: transparent;
  color: #fff;
  border: 2px solid rgba(255, 255, 255, 0.4);
  height: 50px;
  padding-left: 20px;
  box-shadow: none !important;
}

.input-subscribe:focus {
  border: 2px solid rgba(255, 255, 255, 0.6);
}

input.input-subscribe::-webkit-input-placeholder {
  color: rgba(255, 255, 255, 0.4);
  font-weight: normal;
}

input.input-subscribe:-moz-placeholder {
  color: rgba(255, 255, 255, 0.4);
}

input.input-subscribe::-moz-placeholder {
  color: rgba(255, 255, 255, 0.4);
}

input.input-subscribe:-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.4);
}

label.valid {
  color: #ffffff;
  font-weight: normal;
  margin: 10px 0;
}


/*======= 11 Footer =======*/

.footer {
  padding-top: 60px;
  padding-bottom: 60px;
  background-color: #2f3e47;
}

.footer h5{
  color: #ffffff;
  font-size: 15px;
  margin-bottom: 20px;
  font-weight: 700;
  letter-spacing: 1px;
}

.footer a{
  color: rgba(255, 255, 255, 0.4);;
}

.footer a:hover{
  color: rgba(255, 255, 255, 0.6);;
}

.footer ul li {
  margin: 5px 0px;
}

.footer-alt {
  margin-top: 30px;
  padding-top: 20px;
}

.footer address {
  color: rgba(255, 255, 255, 0.4);
  line-height: 24px;
  font-size: 13px;
}


/* == 12. Other pages CSS === */

.header-title-box {
  padding-top: 190px;
  padding-bottom: 155px
}

.header-title-box h3 {
  font-size: 30px;
  font-weight: 300;
}

.title-about h3 {
  margin-bottom: 30px;
}

.wide-img-showcase-row {
  position: relative;
}

.no-padding.img {
  background: url(../images/showcase-1.jpg) scroll center no-repeat;
  background-size: cover;
  position: absolute;
  height: 100%;
}

.no-padding.img-2 {
  background: url(../images/showcase-2.jpg) scroll center no-repeat;
  background-size: cover;
  position: absolute;
  height: 100%;
}

.about-detail-img-box {
  padding: 15% 0;
}


/* == 12.1 Contact ==*/
textarea {
  max-width: 100%;
}

.contact-form .form-control {
  height: 42px;
  box-shadow: none;
  border: 2px solid rgba(40, 40, 46, 0.3);
}

textarea.form-control {
  height: auto !important;
}

.error {
  margin: 8px 0px;
  display: none;
  color: red;
  font-weight: normal;
}

#ajaxsuccess {
  font-size: 16px;
  width: 100%;
  display: none;
  clear: both;
  margin: 8px 0px;
}

.contact-box {
  padding: 30px;
}

.contact-detail {
  margin-bottom: 40px;
}
.contact-detail i{
  float: left;
  width: 40px;
  font-size: 24px;
}

.contact-detail p,.contact-detail address{
  overflow: hidden;
}

.contact-detail a {
  color: #496174;
}
.parsley-error {
  border: 2px solid red !important;
}
.parsley-errors-list {
  padding-left: 0px;
}
/* ... */

